cmake_minimum_required (VERSION 3.8)
set (CMAKE_CXX_STANDARD 20)

project(P7 VERSION 0.1.0)
project(P7Lab VERSION 0.1.0)


add_subdirectory(src/Helpers/)
add_subdirectory(src/RunReport/)
add_subdirectory(src/Config/)
add_subdirectory(src/PathCheckers/)
add_subdirectory(src/FileVerifier)
add_subdirectory(src/DownwardRunner/)
add_subdirectory(src/PDDLCodeGenerator/)
add_subdirectory(src/IntermediatePDDL)
add_subdirectory(src/CommonInterface/)
add_subdirectory(src/PlanValidators)
add_subdirectory(src/Reformulators)
add_subdirectory(src/PDDLParser)
add_subdirectory(src/SASCodeGenerator)
add_subdirectory(src/SASParser)
add_subdirectory(src/Walker/)
add_subdirectory(src/Walker/DepthFunctions/)
add_subdirectory(src/Walker/WidthFunctions/)
add_subdirectory(src/)


file(COPY Data DESTINATION ${CMAKE_BINARY_DIR})
file(COPY "runP7.py" DESTINATION ${CMAKE_BINARY_DIR})

set(CPACK_PROJECT_NAME ${PROJECT_NAME})
set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
include(CPack)
include(Test/CMakeLists.txt)