cmake_minimum_required (VERSION 3.8)
set (CMAKE_CXX_STANDARD 20)

project(P7 VERSION 0.1.0)
project(P7Lab VERSION 0.1.0)


add_subdirectory(src/Helpers/)
add_subdirectory(src/RunReport/)
add_subdirectory(src/Config/)
add_subdirectory(src/PathCheckers/)
add_subdirectory(src/FileVerifier)
add_subdirectory(src/DownwardRunner/)
add_subdirectory(src/PDDLCodeGenerator/)
add_subdirectory(src/IntermediatePDDL)
add_subdirectory(src/CommonInterface/)
add_subdirectory(src/PlanValidators)
add_subdirectory(src/Reformulators)
add_subdirectory(src/PDDLParser)
add_subdirectory(src/EntanglementFinder)
add_subdirectory(src/MacroGenerator)
add_subdirectory(src/MacroVerifyer)
add_subdirectory(src/Walker/)
add_subdirectory(src/WalkerPathVerifyer/)
add_subdirectory(src/SAS)
add_subdirectory(src/)


file(COPY Lab DESTINATION ${CMAKE_BINARY_DIR})
file(COPY LabSettings DESTINATION ${CMAKE_BINARY_DIR})
configure_file(${PROJECT_SOURCE_DIR}/runP7.py ${CMAKE_BINARY_DIR}/runP7.py COPYONLY)
configure_file(${PROJECT_SOURCE_DIR}/graphGeneration.R ${CMAKE_BINARY_DIR}/graphGeneration.R COPYONLY)

configure_file(${PROJECT_SOURCE_DIR}/Lab/__init__.py ${CMAKE_BINARY_DIR}/Lab/__init__.py COPYONLY)
configure_file(${PROJECT_SOURCE_DIR}/Lab/Reports.py ${CMAKE_BINARY_DIR}/Lab/Reports.py COPYONLY)
configure_file(${PROJECT_SOURCE_DIR}/Lab/AnytimeSearchParser.py ${CMAKE_BINARY_DIR}/Lab/AnytimeSearchParser.py COPYONLY)
configure_file(${PROJECT_SOURCE_DIR}/Lab/SingleSearchParser.py ${CMAKE_BINARY_DIR}/Lab/SingleSearchParser.py COPYONLY)
configure_file(${PROJECT_SOURCE_DIR}/Lab/TranslatorParser.py ${CMAKE_BINARY_DIR}/Lab/TranslatorParser.py COPYONLY)
configure_file(${PROJECT_SOURCE_DIR}/Lab/P7LabParser.py ${CMAKE_BINARY_DIR}/Lab/P7LabParser.py COPYONLY)
configure_file(${PROJECT_SOURCE_DIR}/Lab/ConfigParser.py ${CMAKE_BINARY_DIR}/Lab/ConfigParser.py COPYONLY)
configure_file(${PROJECT_SOURCE_DIR}/Lab/CSVGenerator.py ${CMAKE_BINARY_DIR}/Lab/CSVGenerator.py COPYONLY)
configure_file(${PROJECT_SOURCE_DIR}/Lab/LabSettingsParser.py ${CMAKE_BINARY_DIR}/Lab/LabSettingsParser.py COPYONLY)
configure_file(${PROJECT_SOURCE_DIR}/Lab/PathHelper.py ${CMAKE_BINARY_DIR}/Lab/PathHelper.py COPYONLY)
configure_file(${PROJECT_SOURCE_DIR}/Lab/SettingsParser.py ${CMAKE_BINARY_DIR}/Lab/SettingsParser.py COPYONLY)
configure_file(${PROJECT_SOURCE_DIR}/Lab/Benchmarks.py ${CMAKE_BINARY_DIR}/Lab/Benchmarks.py COPYONLY)
configure_file(${PROJECT_SOURCE_DIR}/Lab/LabSuite.py ${CMAKE_BINARY_DIR}/Lab/LabSuite.py COPYONLY)

configure_file(${PROJECT_SOURCE_DIR}/baseSettings.ini ${CMAKE_BINARY_DIR}/baseSettings.ini COPYONLY)
configure_file(${PROJECT_SOURCE_DIR}/settings.ini ${CMAKE_BINARY_DIR}/settings.ini COPYONLY)
configure_file(${PROJECT_SOURCE_DIR}/settingsFast.ini ${CMAKE_BINARY_DIR}/settingsFast.ini COPYONLY)
configure_file(${PROJECT_SOURCE_DIR}/settingsLab.ini ${CMAKE_BINARY_DIR}/settingsLab.ini COPYONLY)

set(CPACK_PROJECT_NAME ${PROJECT_NAME})
set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
include(CPack)
include(Test/CMakeLists.txt)