add_library(Walker "Variants/WalkerGreedy.cpp")
target_sources(Walker
    PRIVATE
        ${CMAKE_CURRENT_LIST_DIR}/Variants/WalkerGreedy.cpp
        ${CMAKE_CURRENT_LIST_DIR}/Variants/WalkerGreedyResume.cpp
        ${CMAKE_CURRENT_LIST_DIR}/Variants/WalkerQueue.cpp
        ${CMAKE_CURRENT_LIST_DIR}/Variants/WalkerProbe.cpp
        ${CMAKE_CURRENT_LIST_DIR}/WalkerBuilder.cpp
    PUBLIC
        ${CMAKE_CURRENT_LIST_DIR}/Variants/WalkerGreedy.hpp
        ${CMAKE_CURRENT_LIST_DIR}/Variants/WalkerGreedyResume.hpp
        ${CMAKE_CURRENT_LIST_DIR}/Variants/WalkerQueue.hpp
        ${CMAKE_CURRENT_LIST_DIR}/Variants/WalkerProbe.hpp
        ${CMAKE_CURRENT_LIST_DIR}/BaseWalker.hh
        ${CMAKE_CURRENT_LIST_DIR}/Path.hpp
        ${CMAKE_CURRENT_LIST_DIR}/WalkerBuilder.hpp)
target_include_directories(Walker
    PUBLIC
        ${CMAKE_CURRENT_LIST_DIR})
target_link_libraries(Walker
    PRIVATE
        IntermediatePDDL
        Config
        Hashes
        ActionGenerator)
